--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="loader"></div>
     </div>
 
-    <!-- ------NAV---------->
+    <!-- =======NAV============ -->
     <header class="header" id="header">
         <nav class="nav container">
             <a href="index.html" class="nav-logo">Akash M</a>
@@ -51,7 +51,7 @@
             </div>
 
             <div class="nav-actions">
-                <i class="ri-moon-line change-theme" id="theme-button"></i>
+                <i class="ri-moon-foggy-line change-theme" id="theme-button"></i>
                 <div class="nav-toggle" id="nav-toggle">
                     <i class="ri-menu-5-line" id="white"></i>
                 </div>
@@ -74,7 +74,7 @@
                 <div class="home-content grid">
                     <div class="home-data grid">
                         <h1 class="home-name">Akash M</h1>
-                        <h2 class="home-profession">Web Design & <span>Developer</span></h2>
+                        <h2 class="home-profession">Web Designer &<span> Developer</span></h2>
 
                         <div class="home-social">
                             <a href="https://github.com/akash7807" target="_blank" class="home-social-link">
@@ -92,7 +92,8 @@
 
                         <a href="https://drive.google.com/file/d/1BjigK1snQLXMXmZCHVRunAogPfiC5uTS/view?usp=sharing"
                             target="_blank" class="home-button btn" id="cv" download>My Resume
-                            <i class="ri-arrow-right-double-line"></i></a>
+                            <i class="ri-arrow-right-double-line"></i>
+                        </a>
 
                     </div>
                 </div>
@@ -197,9 +198,10 @@
         </div>
     </section>
 
+
     <!-- --------NOTES & PDF-------- -->
     <div class="project-links">
-        <h3 class="link-title">Project Link</h3>
+        <h3 class="link-title section-title">Project Link</h3>
         <section class="work section link-page padding">
 
             <div class="left mobile">
@@ -242,8 +244,7 @@
     <!-- ----------WORK------------- -->
     <section class="work section work-page padding">
         <h2 class="section-title">
-            MY Most <br>
-            Recent Works
+            Recent Projects
         </h2>
 
         <div class="work-container container grid">
@@ -476,7 +477,8 @@
         </div>
     </section>
 
-    <!----------Skills-------------------->
+
+    <!-- ==================SKILLS=================== -->
     <section class="skills">
         <h2 class="section-title">
             <span>Skills</span> &<br>
@@ -529,56 +531,76 @@
         </div>
     </section>
 
-    <!----------------Testimonial----------------------->
-    <section class="testimonial section padding">
-        <h2 class="section-title">
-            what They Say <br>
-            About Me?
-        </h2>
-        <div class="testimonial-container container">
-            <div class="testimonial-swiper swiper">
-                <div class="swiper-wrapper">
-                    <article class="testimonial-card swiper-slide">
-                        <div class="testimonial-border">
-                            <img src="images/user1.jpg" class="testimonial-img" loading="lazy">
-                        </div>
+    <!-- =============Testimonial=========  -->
+    <section class="section testimonial_container">
+        <div class="testimonial_header">
+            <h2 class="section-title">Client Feedback</h2>
+            <p>What Our Clients Say About Us</p>
+        </div>
 
-                        <h2 class="testimonial-name">Sam Sundar</h2>
-                        <p class="testimonial-description">
-                            I am very impressed with the quality of the work done.
-                            The project is well-made and shows great attention to detail
-                        </p>
-                    </article>
+        <div class="testimonials">
 
-                    <article class="testimonial-card swiper-slide">
-                        <div class="testimonial-border">
-                            <img src="images/user2.jpg" class="testimonial-img" loading="lazy">
-                        </div>
-
-                        <h2 class="testimonial-name">Riya</h2>
-                        <p class="testimonial-description">
-                            My Business Shop project looks amazing! The colors, layout,
-                            and design are all fantastic. I'm really happy with it.
-                        </p>
-                    </article>
-
-                    <article class="testimonial-card swiper-slide">
-                        <div class="testimonial-border">
-                            <img src="images/user3.jpg" class="testimonial-img" loading="lazy">
-                        </div>
-
-                        <h2 class="testimonial-name">tony stark</h2>
-                        <p class="testimonial-description">
-                            I worked with a great team on my e-commerce web project,
-                            and the final result is wonderful. It's easy to use and has a nice design.
-                        </p>
-                    </article>
+            <div class="testimonial">
+                <div class="testimonial-header">
+                    <img src="/images/user1.jpeg" alt="sam" class="testimonial-image">
+                    <div>
+                        <p class="testimonial-name">Sam Sundar</p>
+                        <p class="testimonial-address">Ambur, Tamil Nadu</p>
+                    </div>
                 </div>
+                <div class="testimonial-rating">
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                </div>
+                <p class="testimonial-review">"I am very impressed with the quality of the work done. The project is
+                    well-made and shows great attention to detail."</p>
+            </div>
+
+            <div class="testimonial">
+                <div class="testimonial-header">
+                    <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?q=80&w=200" alt="Arjun"
+                        class="testimonial-image">
+                    <div>
+                        <p class="testimonial-name">Arjun Reddy</p>
+                        <p class="testimonial-address">Chennai, Tamil Nadu</p>
+                    </div>
+                </div>
+                <div class="testimonial-rating">
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star">&#9734;</span>
+                </div>
+                <p class="testimonial-review">"I recently had a landing page built and it exceeded my expectations! It’s
+                    modern, responsive, and perfectly captures my vision."</p>
+            </div>
+
+            <div class="testimonial">
+                <div class="testimonial-header">
+                    <img src="/images/user2.jpg" alt="Riya" class="testimonial-image">
+                    <div>
+                        <p class="testimonial-name">Riya</p>
+                        <p class="testimonial-address">Bellandur, Bengaluru</p>
+                    </div>
+                </div>
+                <div class="testimonial-rating">
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                    <span class="star filled">&#9733;</span>
+                </div>
+                <p class="testimonial-review">"My e-commerce store project looks amazing! The colors, layout, and design
+                    are fantastic. I'm really happy with it!"</p>
             </div>
         </div>
     </section>
 
-    <!----------------CONTACT---------------->
+    <!------===============CONTACT====================----->
     <section class="contact section padding">
         <div class="contact-container container grid">
             <h2 class="section-title">
