--- a/about.html
+++ b/about.html
@@ -4,51 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AK Portfolio</title>
+    <title>Akash M</title>
     <link rel="icon" href="images/favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css"
-        integrity="sha512-OQDNdI5rpnZ0BRhhJc+btbbtnxaj+LdQFeh0V9/igiEPDiWE2fG+ZsXl0JEH+bjXKPJ3zcXqNyP4/F/NegVdZg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.css" />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/about.css">
 </head>
 
 <body>
 
-    <!-- Header  -->
-    <header class="header pages" id="header">
+    <!-- ------NAV---------->
+    <header class="header" id="header">
         <nav class="nav container">
-            <a href="index.html" class="nav-logo">Akash</a>
+            <a href="index.html" class="nav-logo">Akash M</a>
 
             <div class="nav-menu " id="nav-menu">
                 <ul class="nav-list" id="navigation">
-                    <li class="nav-item  nav-dark">
+                    <li class="nav-item">
                         <a href="index.html" class="list">Home</a>
                     </li>
-                    <li class="nav-item nav-dark">
+                    <li class="nav-item">
                         <a href="about.html" class="list">About Me</a>
                     </li>
-                    <li class="nav-item  nav-dark">
+                    <li class="nav-item">
                         <a href="work.html" class="list">Portfolio</a>
                     </li>
-                    <li class="button">
-                        <a href="contact.html" class="list">Contact Me</a>
+                    <li class="nav-item nav-btn">
+                        <a href="contact.html" class="list">
+                            <p class="nav-button">Contact Me</p>
+                        </a>
                     </li>
                 </ul>
                 <!-- close button  -->
                 <div class="nav-close" id="nav-close">
-                    <i class="ri-close-line"></i>
+                    <i class="ri-close-line" id="close"></i>
                 </div>
             </div>
 
             <div class="nav-actions">
-                <i class="ri-moon-line change-theme i" id="theme-button"></i>
+                <i class="ri-moon-line change-theme" id="theme-button"></i>
                 <div class="nav-toggle" id="nav-toggle">
-                    <i class="ri-menu-5-line"></i>
+                    <i class="ri-menu-5-line" id="white"></i>
                 </div>
             </div>
+
         </nav>
     </header>
+
 
     <!-------Proflie Card------>
     <main class="main">
@@ -68,7 +70,7 @@
                 <div class="about-data grid">
                     <div class="about-info grid">
                         <h1 class="about-name">Akash M</h1>
-                        <h2 class="about-profession">Web Design & Developer</h2>
+                        <h2 class="about-profession">Web Designer & Developer</h2>
                         <p class="about-description">
                             Passionate about Creating <b>Web Pages</b> width
                             <b>UI/UX User Interface</b>, i have years of experience and many clients are happy with
@@ -141,7 +143,7 @@
     <footer class="footer">
         <div class="footer-container container grid">
             <div class="footer-content grid">
-                <a href="index.html" class="footer-logo">Akash</a>
+                <a href="index.html" class="footer-logo">Akash M</a>
 
                 <ul class="footer-links">
                     <li>
