--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
             <div class="testimonial">
                 <div class="testimonial-header">
-                    <img src="/images/user1.jpeg" alt="sam" class="testimonial-image">
+                    <img src="images/user1.jpeg" alt="sam" class="testimonial-image">
                     <div>
                         <p class="testimonial-name">Sam Sundar</p>
                         <p class="testimonial-address">Ambur, Tamil Nadu</p>
@@ -581,7 +581,7 @@
 
             <div class="testimonial">
                 <div class="testimonial-header">
-                    <img src="/images/user2.jpg" alt="Riya" class="testimonial-image">
+                    <img src="images/user2.jpg" alt="Riya" class="testimonial-image">
                     <div>
                         <p class="testimonial-name">Riya</p>
                         <p class="testimonial-address">Bellandur, Bengaluru</p>
