--- a/about.html
+++ b/about.html
@@ -71,10 +71,13 @@
                     <div class="about-info grid">
                         <h1 class="about-name">Akash M</h1>
                         <h2 class="about-profession">Web Designer & Developer</h2>
-                        <p class="about-description">
-                            Passionate about Creating <b>Web Pages</b> width
-                            <b>UI/UX User Interface</b>, i have years of experience and many clients are happy with
-                            the projects carried out.
+                        <p class="about-description about__grid">
+                            I am Akash M, a <b>Full Stack Web Developer</b> with strong expertise in <b>React and
+                                JavaScript</b>.
+                            I have successfully completed over <b>20 projects</b>, including a job portal, chat
+                            application, and
+                            finance tracker. I specialize in responsive design, modern layouts, and efficient component
+                            structures, delivering scalable and user-friendly web solutions.
                         </p>
                     </div>
                     <a href="contact.html" class="about-button ">
@@ -135,6 +138,28 @@
                     </div>
 
                 </div>
+
+                <!-- Social Link  -->
+                <div class="social-container">
+                    <div class="social-button">
+                        <ul class="list">
+                            <a href="https://github.com/AKASH7807" target="_blank">
+                                <img src="images/link/github.png" alt="">
+                            </a>
+                            <a href="https://www.linkedin.com/in/akash7807/" target="_blank">
+                                <img src="images/link/linkedin.png" alt="">
+                            </a>
+                            <a href="https://leetcode.com/u/akash7807/" target="_blank">
+                                <img src="images/link/leetcode.png" alt="">
+                            </a>
+                            <a href="https://dribbble.com/Akash7807" target="_blank">
+                                <img src="images/link/dribbble.png" alt="">
+                            </a>
+                        </ul>
+                    </div>
+                </div>
+                <!-- social link end  -->
+
             </div>
         </section>
     </main>
@@ -198,4 +223,5 @@
     <script src="js/animation.js"></script>
 
 </body>
+
 </html>
