--- a/index.html
+++ b/index.html
@@ -111,28 +111,25 @@
         <div class="services-container services-grid container grid">
             <article class="services-card">
                 <i class="ri-code-s-slash-line services-icon"></i>
-                <h2 class="services-title">Web Developer</h2>
+                <h2 class="services-title">Frontend Developer</h2>
                 <p class="services-description">
-                    Freelancing web development offers quality
-                    modern designs and responsive pages at affordable prices, ensuring client satisfaction.
+                    Fully functional, responsive, modern layout design with user interaction using web animations
+                    and visual support like image integration.
                 </p>
                 <button class="services-button btn">Know More</button>
                 <div class="services-modal">
                     <div class="services-modal-content">
                         <i class="ri-close-line services-modal-close"></i>
-                        <div class="services-modal-title">Web Developer</div>
+                        <div class="services-modal-title">Front End Developer</div>
                         <ul class="services-modal-list grid">
                             <li class="services-modal-item">
-                                Create professional and quality websites at the client's request.
+                                Cross-Browser Compatibility
                             </li>
                             <li class="services-modal-item">
-                                I do web design in prototypes.
+                                Optimized website with advanced SEO
                             </li>
                             <li class="services-modal-item">
-                                I osition your website with advance SEO.
-                            </li>
-                            <li class="services-modal-item">
-                                I am build fast and functional designs.
+                                Performance Optimization
                             </li>
                         </ul>
                     </div>
@@ -143,23 +140,23 @@
                 <i class="ri-pen-nib-line services-icon"></i>
                 <h2 class="services-title">Web Designer</h2>
                 <p class="services-description">
-                    Experience our modern web design featuring trendy gradient colors,<br>
-                    optimized for SEO to boost visibility and enhance user engagement.
+                    Modern layout design using Figma and Canva, including color pattern design, responsive design
+                    planning, and conceptual ideas.
                 </p>
                 <button class="services-button btn">Know More</button>
                 <div class="services-modal">
                     <div class="services-modal-content">
                         <i class="ri-close-line services-modal-close"></i>
-                        <div class="services-modal-title">Web Developer</div>
+                        <div class="services-modal-title">Web Designer</div>
                         <ul class="services-modal-list grid">
                             <li class="services-modal-item">
-                                Create professional and quality websites at the client's request.
+                                Color Pattern & Visual Identity
                             </li>
                             <li class="services-modal-item">
-                                Intractive Web pages and combinational Color designs as client's request.
+                                Modern and Creative Layouts
                             </li>
                             <li class="services-modal-item">
-                                dynamic design and intractive functions using javascript
+                                Responsive Design & Planning
                             </li>
                         </ul>
                     </div>
@@ -170,9 +167,10 @@
 
             <article class="services-card">
                 <i class="ri-layout-2-line services-icon"></i>
-                <h2 class="services-title">Interfaces UI/UX</h2>
+                <h2 class="services-title">Full Stack Developer</h2>
                 <p class="services-description">
-                    Dynamic and functional web page with prototype modal design & glassmorphism design.
+                    Fully functional and responsive client-server model project, deployed online with authentication
+                    features.
                 </p>
 
                 <button class="services-button btn">Know More</button>
@@ -180,21 +178,22 @@
                 <div class="services-modal">
                     <div class="services-modal-content">
                         <i class="ri-close-line services-modal-close"></i>
-                        <div class="services-modal-title">Web Developer</div>
+                        <div class="services-modal-title">Mern Stack Developer</div>
                         <ul class="services-modal-list grid">
                             <li class="services-modal-item">
-                                Create professional and quality websites at the client's request.
+                                Database Integration, full stack project
                             </li>
                             <li class="services-modal-item">
-                                digital solutions that empower your business to grow.
+                                Secure Authentication & Authorization service.
                             </li>
                             <li class="services-modal-item">
-                                Responsive and customizable to web design.
+                                Fully Functional Client-Server Model
                             </li>
                         </ul>
                     </div>
                 </div>
             </article>
+
         </div>
     </section>
 
@@ -251,6 +250,17 @@
 
             <article class="work-card">
                 <a href="" class="work-link">
+                    <img src="images/chatapp.png" class="work-img" loading="lazy">
+                    <i class="ri-arrow-right-circle-line work-icon"></i>
+                </a>
+                <h2 class="work-title">Chat App</h2>
+                <span class="work-subtitle">Mern Stack</span>
+                <a href="https://eazy-chat.vercel.app/" class="link" target="_blank">Visit site
+                    <i class="ri-arrow-right-line"></i> </a>
+            </article>
+
+            <article class="work-card">
+                <a href="" class="work-link">
                     <img src="images/freshcart.png" class="work-img" loading="lazy">
                     <i class="ri-arrow-right-circle-line work-icon"></i>
                 </a>
@@ -304,7 +314,6 @@
                         class="ri-arrow-right-line"></i> </a>
             </article>
 
-
             <article class="work-card">
                 <a href="" class="work-link">
                     <img src="images/car.png" class="work-img" loading="lazy">
@@ -315,7 +324,6 @@
                 <a href="https://akash7807.github.io/car-shop/" class="link" target="_blank">Visit site <i
                         class="ri-arrow-right-line"></i> </a>
             </article>
-
 
             <article class="work-card">
                 <a href="" class="work-link">
@@ -349,7 +357,6 @@
                 <a href="https://akash7807.github.io/gaming/" class="link" target="_blank">Visit site <i
                         class="ri-arrow-right-line"></i> </a>
             </article>
-
 
             <article class="work-card">
                 <a href="" class="work-link">
@@ -428,30 +435,6 @@
                         class="ri-arrow-right-line"></i> </a>
             </article>
 
-
-            <article class="work-card">
-                <a href="" class="work-link">
-                    <img src="images/work3.png" class="work-img" loading="lazy">
-                    <i class="ri-arrow-right-circle-line work-icon"></i>
-                </a>
-                <h2 class="work-title">Register Form</h2>
-                <span class="work-subtitle">Web Design</span>
-                <a href="http://akash7807.github.io/Javascript-crud" class="link" target="_blank">Visit site <i
-                        class="ri-arrow-right-line"></i> </a>
-            </article>
-
-
-            <article class="work-card">
-                <a href="" class="work-link">
-                    <img src="images/work7.png" class="work-img" loading="lazy">
-                    <i class="ri-arrow-right-circle-line work-icon"></i>
-                </a>
-                <h2 class="work-title">Tik Tok Toe Game</h2>
-                <span class="work-subtitle">Web Design</span>
-                <a href="https://akash7807.github.io/tik-tok-toe/" class="link" target="_blank">Visit site <i
-                        class="ri-arrow-right-line"></i> </a>
-            </article>
-
             <article class="work-card">
                 <a href="" class="work-link">
                     <img src="images/work8.png" class="work-img" loading="lazy">
@@ -461,6 +444,17 @@
                 <span class="work-subtitle">Web Design</span>
                 <a href="https://akash7807.github.io/Calculator/calculator" class="link" target="_blank">Visit site <i
                         class="ri-arrow-right-line"></i> </a>
+            </article>
+
+            <article class="work-card">
+                <a href="" class="work-link">
+                    <img src="images/certificate.png" class="work-img" loading="lazy">
+                    <i class="ri-arrow-right-circle-line work-icon"></i>
+                </a>
+                <h2 class="work-title">Certificates</h2>
+                <span class="work-subtitle">Web Design</span>
+                <a href="https://akash-certificate.web.app/" class="link" target="_blank">Visit site
+                    <i class="ri-arrow-right-line"></i> </a>
             </article>
 
             <article class="work-card">
