--- a/work.html
+++ b/work.html
@@ -95,13 +95,24 @@
 
 
 
-    <!-- ============================ WORK PORJECTS ============================= -->
-    <section class="work section work-page">
+    <!-- ----------WORK------------- -->
+    <section class="work section work-page padding">
         <h2 class="section-title">
-            Recent Works
+            Recent Projects
         </h2>
 
         <div class="work-container container grid">
+
+            <article class="work-card">
+                <a href="" class="work-link">
+                    <img src="images/chatapp.png" class="work-img" loading="lazy">
+                    <i class="ri-arrow-right-circle-line work-icon"></i>
+                </a>
+                <h2 class="work-title">Chat App</h2>
+                <span class="work-subtitle">Mern Stack</span>
+                <a href="https://eazy-chat.vercel.app/" class="link" target="_blank">Visit site
+                    <i class="ri-arrow-right-line"></i> </a>
+            </article>
 
             <article class="work-card">
                 <a href="" class="work-link">
@@ -158,7 +169,6 @@
                         class="ri-arrow-right-line"></i> </a>
             </article>
 
-
             <article class="work-card">
                 <a href="" class="work-link">
                     <img src="images/car.png" class="work-img" loading="lazy">
@@ -169,7 +179,6 @@
                 <a href="https://akash7807.github.io/car-shop/" class="link" target="_blank">Visit site <i
                         class="ri-arrow-right-line"></i> </a>
             </article>
-
 
             <article class="work-card">
                 <a href="" class="work-link">
@@ -203,7 +212,6 @@
                 <a href="https://akash7807.github.io/gaming/" class="link" target="_blank">Visit site <i
                         class="ri-arrow-right-line"></i> </a>
             </article>
-
 
             <article class="work-card">
                 <a href="" class="work-link">
@@ -282,30 +290,6 @@
                         class="ri-arrow-right-line"></i> </a>
             </article>
 
-
-            <article class="work-card">
-                <a href="" class="work-link">
-                    <img src="images/work3.png" class="work-img" loading="lazy">
-                    <i class="ri-arrow-right-circle-line work-icon"></i>
-                </a>
-                <h2 class="work-title">Register Form</h2>
-                <span class="work-subtitle">Web Design</span>
-                <a href="http://akash7807.github.io/Javascript-crud" class="link" target="_blank">Visit site <i
-                        class="ri-arrow-right-line"></i> </a>
-            </article>
-
-
-            <article class="work-card">
-                <a href="" class="work-link">
-                    <img src="images/work7.png" class="work-img" loading="lazy">
-                    <i class="ri-arrow-right-circle-line work-icon"></i>
-                </a>
-                <h2 class="work-title">Tik Tok Toe Game</h2>
-                <span class="work-subtitle">Web Design</span>
-                <a href="https://akash7807.github.io/tik-tok-toe/" class="link" target="_blank">Visit site <i
-                        class="ri-arrow-right-line"></i> </a>
-            </article>
-
             <article class="work-card">
                 <a href="" class="work-link">
                     <img src="images/work8.png" class="work-img" loading="lazy">
@@ -315,6 +299,17 @@
                 <span class="work-subtitle">Web Design</span>
                 <a href="https://akash7807.github.io/Calculator/calculator" class="link" target="_blank">Visit site <i
                         class="ri-arrow-right-line"></i> </a>
+            </article>
+
+            <article class="work-card">
+                <a href="" class="work-link">
+                    <img src="images/certificate.png" class="work-img" loading="lazy">
+                    <i class="ri-arrow-right-circle-line work-icon"></i>
+                </a>
+                <h2 class="work-title">Certificates</h2>
+                <span class="work-subtitle">Web Design</span>
+                <a href="https://akash-certificate.web.app/" class="link" target="_blank">Visit site
+                    <i class="ri-arrow-right-line"></i> </a>
             </article>
 
             <article class="work-card">
@@ -330,6 +325,8 @@
 
         </div>
     </section>
+
+
 
 
     <!-- =============FOOTER=============== -->
