--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="home-container grid">
                 <div class="home-profile">
                     <div class="profile-container">
-                        <img src="images/img.png" class="profile-img">
+                        <img src="images/profile.png" class="profile-img">
                     </div>
                 </div>
                 <div class="home-content grid">
@@ -211,27 +211,30 @@
                 <div class="box">
                     <div class="top">
                         <img src="images/link1.png" alt="img">
-                        <p>Portfolio Page</p>
+                        <p>Blog Page</p>
                     </div>
-                    <a href="images/PORTFOLIO PAGE.png" class="home-button btn slide" download>Download
+                    <a target="_blank" href="https://www.akblog.store/" class="home-button btn slide"><span>View
+                        </span>Blog
                         <i class="ri-arrow-right-double-fill"></i> </a>
                 </div>
 
                 <div class="box">
                     <div class="top">
                         <img src="images/link2.png" alt="img">
-                        <p>Profile Page</p>
+                        <p>Resume</p>
                     </div>
-                    <a href="images/PROFILE UI.pdf" class="home-button btn slide" download>Download
+                    <a target="_blank"
+                        href="https://drive.google.com/drive/folders/1VYtwqaWo7nT2fvNN0fT1ef58s6ogbgG9?usp=drive_link"
+                        class="home-button btn slide"> <span>View</span>Resumes
                         <i class="ri-arrow-right-double-fill"></i> </a>
                 </div>
 
                 <div class="box">
                     <div class="top">
                         <img src="images/link3.png" alt="img">
-                        <p>Web Design pdf</p>
+                        <p>Web Design</p>
                     </div>
-                    <a href="images/WEB DESIGN PATTERN.pdf" class="home-button btn slide" download>Download
+                    <a href="images/web_design.pdf" class="home-button btn slide" download>Download
                         <i class="ri-arrow-right-double-fill"></i> </a>
                 </div>
             </div>
@@ -247,6 +250,17 @@
         </h2>
 
         <div class="work-container container grid">
+
+            <article class="work-card">
+                <a href="" class="work-link">
+                    <img src="images/medimeet.png" class="work-img" loading="lazy">
+                    <i class="ri-arrow-right-circle-line work-icon"></i>
+                </a>
+                <h2 class="work-title">MediMeet</h2>
+                <span class="work-subtitle">Full Stack</span>
+                <a href="https://medimeet-web.vercel.app/" class="link" target="_blank">Visit site
+                    <i class="ri-arrow-right-line"></i> </a>
+            </article>
 
             <article class="work-card">
                 <a href="" class="work-link">
@@ -276,7 +290,7 @@
                     <i class="ri-arrow-right-circle-line work-icon"></i>
                 </a>
                 <h2 class="work-title">Finance Tracker</h2>
-                <span class="work-subtitle">Mern Stack</span>
+                <span class="work-subtitle">Full Stack</span>
                 <a href="https://wealthtracker.vercel.app/" class="link" target="_blank">Visit site
                     <i class="ri-arrow-right-line"></i> </a>
             </article>
