--- a/work.html
+++ b/work.html
@@ -105,6 +105,17 @@
 
             <article class="work-card">
                 <a href="" class="work-link">
+                    <img src="images/medimeet.png" class="work-img" loading="lazy">
+                    <i class="ri-arrow-right-circle-line work-icon"></i>
+                </a>
+                <h2 class="work-title">MediMeet</h2>
+                <span class="work-subtitle">Full Stack</span>
+                <a href="https://medimeet-web.vercel.app/" class="link" target="_blank">Visit site
+                    <i class="ri-arrow-right-line"></i> </a>
+            </article>
+
+            <article class="work-card">
+                <a href="" class="work-link">
                     <img src="images/chatapp.png" class="work-img" loading="lazy">
                     <i class="ri-arrow-right-circle-line work-icon"></i>
                 </a>
